@startuml
title Core Review Logic (RAM-First Model)

skinparam classAttributeIconSize 0
skinparam linetype ortho
hide empty members
hide circle

class LoadReviewsCommand extends Command {
    - reviewManager : ReviewManager
    + execute(UI, ...)
    - detectUnsavedReviews(Map, Map) : boolean
    - mergeAndSaveReviews(Map, Map, Storage) : int
}
class AddReviewsDatabaseCommand extends Command {
    - reviewManager : ReviewManager
    + execute(UI, ...)
}

class ExitSaveManager {
    - ui : UI
    - reviewManager : ReviewManager
    + promptSaveBeforeExit()
}

class ReviewManager {
    - reviews : Map<String, List<String>>
    - storage : ReviewStorage
    + getAllReviews() : Map
    + loadReviews()
}
class ReviewStorage {
    + load() : Map
    + save(Map)
}

class Parser {
    + parse(String) : Command
}
class UI {
    + showMessage(String)
    + readCommand() : String
}

Parser ..> LoadReviewsCommand : <<creates>>
Parser ..> AddReviewsDatabaseCommand : <<creates>>

LoadReviewsCommand o-- "1" ReviewManager
AddReviewsDatabaseCommand o-- "1" ReviewManager
LoadReviewsCommand ..> UI : <<uses>>

ReviewManager "1" *-- "1" ReviewStorage : (owns)

ExitSaveManager o-- "1" ReviewManager : (uses)
ExitSaveManager o-- "1" UI : (uses)
ExitSaveManager ..> ReviewStorage : <<creates>>

note "Uses private methods via Reflection" as N1
ExitSaveManager .. N1
N1 .. LoadReviewsCommand

@enduml
